<resources>
    <string name="app_name">Easy Food</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="search_icon">Search Icon</string>
    <string name="what_would_you_like_to_eat">What would you like to eat?</string>
    <string name="random_meal_image">Random Meal Image</string>
    <string name="over_popular_items">Over popular items</string>
    <string name="image_loading_failed">Image Loading Failed</string>
</resources>